// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`default slot > svelte 1`] = `
"import { createSlot as _createSlot } from 'vue/vapor';

export function render(_ctx) {
  const n0 = _createSlot("default", null)
  return n0
}"
`;

exports[`default slot > vue 1`] = `
"import { createSlot as _createSlot } from 'vue/vapor';

export function render(_ctx) {
  const n0 = _createSlot("default", null)
  return n0
}"
`;

exports[`default slot with fallback > svelte 1`] = `
"import { createSlot as _createSlot, template as _template } from 'vue/vapor';
const t0 = _template("<div></div>")

export function render(_ctx) {
  const n0 = _createSlot("default", null, () => {
    const n2 = t0()
    return n2
  })
  return n0
}"
`;

exports[`default slot with fallback > vue 1`] = `
"import { createSlot as _createSlot, template as _template } from 'vue/vapor';
const t0 = _template("<div></div>")

export function render(_ctx) {
  const n0 = _createSlot("default", null, () => {
    const n2 = t0()
    return n2
  })
  return n0
}"
`;

exports[`default slot with fallback and props > svelte 1`] = `
"import { createSlot as _createSlot, template as _template } from 'vue/vapor';
const t0 = _template("<div></div>")

export function render(_ctx) {
  const n0 = _createSlot("default", [
    { foo: () => (bar) }
  ], () => {
    const n2 = t0()
    return n2
  })
  return n0
}"
`;

exports[`default slot with fallback and props > vue 1`] = `
"import { createSlot as _createSlot, template as _template } from 'vue/vapor';
const t0 = _template("<div></div>")

export function render(_ctx) {
  const n0 = _createSlot("default", [
    { foo: () => (bar) }
  ], () => {
    const n2 = t0()
    return n2
  })
  return n0
}"
`;

exports[`default slot with props > svelte 1`] = `
"import { createSlot as _createSlot } from 'vue/vapor';

export function render(_ctx) {
  const n0 = _createSlot("default", [
    {
      foo: () => ("bar"), 
      baz: () => (qux), 
      fooBar: () => (fooBar)
    }
  ])
  return n0
}"
`;

exports[`default slot with props > vue 1`] = `
"import { createSlot as _createSlot } from 'vue/vapor';

export function render(_ctx) {
  const n0 = _createSlot("default", [
    {
      foo: () => ("bar"), 
      baz: () => (qux), 
      fooBar: () => (fooBar)
    }
  ])
  return n0
}"
`;

exports[`multiple outlets > svelte 1`] = `
"import { createSlot as _createSlot, prepend as _prepend, insert as _insert, template as _template } from 'vue/vapor';
const t0 = _template("No header was provided")
const t1 = _template("<div> <p>Some content between header and footer</p> </div>")

export function render(_ctx) {
  const n4 = t1()
  const n0 = _createSlot("header", null, () => {
    const n2 = t0()
    return n2
  })
  const n3 = _createSlot("footer", null)
  _prepend(n4, n0)
  _insert(n3, n4)
  return n4
}"
`;

exports[`multiple outlets > vue 1`] = `
"import { createSlot as _createSlot, prepend as _prepend, insert as _insert, template as _template } from 'vue/vapor';
const t0 = _template("No header was provided")
const t1 = _template("<div><p>Some content between header and footer</p></div>")

export function render(_ctx) {
  const n4 = t1()
  const n0 = _createSlot("header", null, () => {
    const n2 = t0()
    return n2
  })
  const n3 = _createSlot("footer", null)
  _prepend(n4, n0)
  _insert(n3, n4)
  return n4
}"
`;

exports[`named slot with fallback > svelte 1`] = `
"import { createSlot as _createSlot, template as _template } from 'vue/vapor';
const t0 = _template("<div></div>")

export function render(_ctx) {
  const n0 = _createSlot("foo", null, () => {
    const n2 = t0()
    return n2
  })
  return n0
}"
`;

exports[`named slot with fallback > vue 1`] = `
"import { createSlot as _createSlot, template as _template } from 'vue/vapor';
const t0 = _template("<div></div>")

export function render(_ctx) {
  const n0 = _createSlot("foo", null, () => {
    const n2 = t0()
    return n2
  })
  return n0
}"
`;

exports[`named slot with fallback and props > svelte 1`] = `
"import { createSlot as _createSlot, template as _template } from 'vue/vapor';
const t0 = _template("<div></div>")

export function render(_ctx) {
  const n0 = _createSlot("foo", [
    { foo: () => (bar) }
  ], () => {
    const n2 = t0()
    return n2
  })
  return n0
}"
`;

exports[`named slot with fallback and props > vue 1`] = `
"import { createSlot as _createSlot, template as _template } from 'vue/vapor';
const t0 = _template("<div></div>")

export function render(_ctx) {
  const n0 = _createSlot("foo", [
    { foo: () => (bar) }
  ], () => {
    const n2 = t0()
    return n2
  })
  return n0
}"
`;

exports[`statically named slot > svelte 1`] = `
"import { createSlot as _createSlot } from 'vue/vapor';

export function render(_ctx) {
  const n0 = _createSlot("foo", null)
  return n0
}"
`;

exports[`statically named slot > vue 1`] = `
"import { createSlot as _createSlot } from 'vue/vapor';

export function render(_ctx) {
  const n0 = _createSlot("foo", null)
  return n0
}"
`;

exports[`statically named slot with props > svelte 1`] = `
"import { createSlot as _createSlot } from 'vue/vapor';

export function render(_ctx) {
  const n0 = _createSlot("foo", [
    {
      baz: () => (qux), 
      fooBar: () => (fooBar)
    }
  ])
  return n0
}"
`;

exports[`statically named slot with props > vue 1`] = `
"import { createSlot as _createSlot } from 'vue/vapor';

export function render(_ctx) {
  const n0 = _createSlot("foo", [
    {
      baz: () => (qux), 
      fooBar: () => (fooBar)
    }
  ])
  return n0
}"
`;

exports[`statically named slot with spread props > svelte 1`] = `
"import { createSlot as _createSlot } from 'vue/vapor';

export function render(_ctx) {
  const n0 = _createSlot("foo", [
    () => (things)
  ])
  return n0
}"
`;

exports[`statically named slot with spread props > vue 1`] = `
"import { createSlot as _createSlot } from 'vue/vapor';

export function render(_ctx) {
  const n0 = _createSlot("foo", [
    () => (things)
  ])
  return n0
}"
`;
